# claude-eats-tokens

./: .env.example  .gitattributes  .gitignore  AGENT.md  AUDIT.md  CLAUDE.md  CONFORT-SETUP.md  DEMARRER.bat  DEPLOIEMENT.md  HANDOFF.md  HOSTED-SETUP.md  LICENSE-ENGINE.md  PAIEMENT-SETUP.md  PAIEMENT.md  README.md  SCHEMA.md  THE-WIRE-MOVE.md  demarrer-silencieux.vbs  desinstaller-demarrage-auto.bat  index.html  installer-demarrage-auto.bat  installer-demarrage-auto.ps1  installer-tache-auto.ps1  installer-tache-planifiee.bat  moteur.bat  pyproject.toml  render.yaml  reparer-tache-auto.ps1  reset.html  secret.local.example.bat  service-worker.js  sw.v10.js  sw.v11.js  sw.v12.js  sw.v13.js  sw.v14.js  sw.v15.js  sw.v16.js  sw.v17.js  sw.v18.js  (+31 more)
.claude/: launch.json
.github/workflows/: pages.yml
claude_eats/: __init__.py  cli.py  config.py  push_usage.py  statusline_windows.py
data/: usage.demo.json
drafts/: audit-concurrents.md  audit-ux-vagues-B-C.md  hosted-version-strategy.md  reddit-comment.md  show-hn.md
drafts/gtm/: email-sequence-3-emails-plain-text-ready.md  hn-responses-kit.md  (+5 more)
pwa/: app.js  aurora.js  config.js  format.js  manifest.json  radar-hero.js  styles.css  three-scenes.js  three3d.js  tokens-field.js
server/: app.py  requirements.txt  supabase-schema.sql
supabase/: config.toml
tests/: run_all.py  test_billing.mjs  test_direct.py  test_format.mjs  test_pairing.py  test_server.py  test_statusline.py  test_usage_core.py
tools/: make_demo.py  moteur.py  push_usage.py  refresh-windows.py  statusline-windows.py  usage_core.py
(+12 files in other folders)
